--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>Lists</title>
     </head>
     <body>
+        <p>This is a paragraph</p>
         An unordered list:
         <ul>
             <li>One Item</li>
