--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <body>
         <p>This is a paragraph</p>
         An unordered list:
-        <ul>
+        <ul style="color:red";>
             <li>One Item</li>
             <li>Another Item</li>
             <li>Yet Another Item</li>
