Added forth item

--- a/hello.html
+++ b/hello.html
@@ -10,6 +10,7 @@
             <li>One Item</li>
             <li>Another Item</li>
             <li>Yet Another Item</li>
+            <li>The Last Item</li>
         </ul>
         An ordered list:
         <ol>
