--- a/hello.html
+++ b/hello.html
@@ -15,7 +15,7 @@
         <ol>
             <li>First Item</li>
             <li>Second Item</li>
-            <li>Third Item</li>
+            <li>Last Item</li>
         </ol>
     </body>
 </html>
