--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,7 @@
         <ol>
             <li>First Item</li>
             <li>Second Item</li>
-            <li>Third Item</li>
+            <li style="color:blue;">Third Item</li>
         </ol>
     </body>
 </html>
