--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,7 @@
         <ol>
             <li>First Item</li>
             <li>Second Item</li>
+            <li>The Third One here</li>
             <li style="color:blue;">Last Item</li>
         </ol>
     </body>
