what is happening

--- a/hello.html
+++ b/hello.html
@@ -17,7 +17,7 @@
             <li>First Item</li>
             <li>Second Item</li>
             <li>The Third One here</li>
-            <li style="color:blue;">Last Item</li>
+            <li style="color:red;">Last Item</li>
         </ol>
     </body>
 </html>
