Moved styling to header

--- a/hello.html
+++ b/hello.html
@@ -3,10 +3,15 @@
     <head>
         <title>Lists</title>
     </head>
+    <style>
+        li {
+            color:red;
+        }
+    </style>
     <body>
         <p>This is a paragraph</p>
         An unordered list:
-        <ul style="color:red";>
+        <ul>
             <li>One Item</li>
             <li>Another Item</li>
             <li>Yet Another Item</li>
@@ -17,7 +22,7 @@
             <li>First Item</li>
             <li>Second Item</li>
             <li>The Third One here</li>
-            <li style="color:red;">Last Item</li>
+            <li>Last Item</li>
         </ol>
     </body>
 </html>
