Changed font size

--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,8 @@
     </head>
     <style>
         li {
-            color:red;
+            color: green;
+            font-size: 14;
         }
     </style>
     <body>
